# phylo

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  training_guide.md
adversary/: __init__.py  adversary_agent.py  adversary_config.py
evaluation/: __init__.py  eval_runner.py
recorder/: recorder.py
scripts/: docker_smoke_test.ps1  hf_training_notebook.py  verify_setup.py
self_play/: __init__.py  generate_replay_parallel.py  replay_buffer.py  self_play_loop.py
server/: Dockerfile  __init__.py  app.py  phylo_environment.py  requirements.txt
sim/: bridge_generator.py  mesh_utils.py  qa_gen_rule.py  scene.py  utils.py
sim/bodies/: base_bodies.py
sim/entities/: base_entities.py
solver/: __init__.py  reward.py  solver_agent.py
training/: __init__.py  curriculum.py  train_adversary.py  train_solver.py
utils/: tracking.py
